--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 	<!-- Prime FACES -->
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>glass-x</param-value>
+		<param-value>afterwork</param-value>
 	</context-param>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
