--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -72,14 +72,21 @@
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
 
-
+	<!-- SECURITY ROLE -->
+<!-- 	<security-role> -->
+<!-- 		<role-name>gerant</role-name> -->
+<!-- 	</security-role> -->
+	<!-- SECURITY ROLE -->
+<!-- 	<security-role> -->
+<!-- 		<role-name>conseiller</role-name> -->
+<!-- 	</security-role> -->
 
 
 	<security-constraint>
-		<display-name>Test authentification tomcat</display-name>
-<!-- 		liste pages -->
+		<display-name>appli ouverte</display-name>
+		<!-- liste pages -->
 		<web-resource-collection>
-			<web-resource-name>Appli protégée</web-resource-name>
+			<web-resource-name>GERANT</web-resource-name>
 			<url-pattern>/*</url-pattern>
 			<http-method>GET</http-method>
 			<http-method>POST</http-method>
@@ -88,8 +95,35 @@
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>conseiller</role-name>
+			<role-name>gerant</role-name>
 		</auth-constraint>
 	</security-constraint>
+	
+<!-- 	<security-constraint> -->
+<!-- 		<display-name>CONSEILLER</display-name> -->
+		<!-- liste pages -->
+<!-- 		<web-resource-collection> -->
+<!-- 			<web-resource-name>Appli protégée</web-resource-name> -->
+<!-- 			<url-pattern>/addAccount.xhtml</url-pattern> -->
+<!-- 			<url-pattern>/ajoutClient.xhtml</url-pattern> -->
+<!-- 			<url-pattern>/bankTransfer.xhtml</url-pattern> -->
+<!-- 			<url-pattern>/error.xhtml</url-pattern> -->
+<!-- 			<url-pattern>/listAccount.xhtml</url-pattern> -->
+<!-- 			<url-pattern>/listClients.xhtml</url-pattern> -->
+<!-- 			<url-pattern>/javax.faces.resource/*</url-pattern> -->
+<!-- 			<url-pattern>/resources/*</url-pattern> -->
+<!-- 			<http-method>GET</http-method> -->
+<!-- 			<http-method>POST</http-method> -->
+<!-- 			<http-method>PUT</http-method> -->
+<!-- 			<http-method>DELETE</http-method> -->
+<!-- 		</web-resource-collection> -->
+<!-- 		<auth-constraint> -->
+<!-- 			<role-name>conseiller</role-name> -->
+<!-- 		</auth-constraint> -->
+<!-- 	</security-constraint> -->
+
+
+
 
 	<login-config>
 		<auth-method>FORM</auth-method>
