--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -75,29 +75,29 @@
 
 
 
-	<security-constraint>
-		<display-name>Test authentification tomcat</display-name>
+<!-- 	<security-constraint> -->
+<!-- 		<display-name>Test authentification tomcat</display-name> -->
 <!-- 		liste pages -->
-		<web-resource-collection>
-			<web-resource-name>Appli protégée</web-resource-name>
-			<url-pattern>/*</url-pattern>
-			<http-method>GET</http-method>
-			<http-method>POST</http-method>
-			<http-method>PUT</http-method>
-			<http-method>DELETE</http-method>
-		</web-resource-collection>
-		<auth-constraint>
-			<role-name>gerant</role-name>
-		</auth-constraint>
-	</security-constraint>
+<!-- 		<web-resource-collection> -->
+<!-- 			<web-resource-name>Appli protégée</web-resource-name> -->
+<!-- 			<url-pattern>/*</url-pattern> -->
+<!-- 			<http-method>GET</http-method> -->
+<!-- 			<http-method>POST</http-method> -->
+<!-- 			<http-method>PUT</http-method> -->
+<!-- 			<http-method>DELETE</http-method> -->
+<!-- 		</web-resource-collection> -->
+<!-- 		<auth-constraint> -->
+<!-- 			<role-name>gerant</role-name> -->
+<!-- 		</auth-constraint> -->
+<!-- 	</security-constraint> -->
 
-	<login-config>
-		<auth-method>FORM</auth-method>
-		<form-login-config>
-			<form-login-page>/login.xhtml</form-login-page>
-			<form-error-page>/error.xhtml</form-error-page>
-		</form-login-config>
-	</login-config>
+<!-- 	<login-config> -->
+<!-- 		<auth-method>FORM</auth-method> -->
+<!-- 		<form-login-config> -->
+<!-- 			<form-login-page>/login.xhtml</form-login-page> -->
+<!-- 			<form-error-page>/error.xhtml</form-error-page> -->
+<!-- 		</form-login-config> -->
+<!-- 	</login-config> -->
 
 
 
